Vehicle Entity fertig gemacht